--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <div class="app">
         <header class="header">
             <div class="logo">
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="16" cy="16" r="16" fill="#FF6B6B"/>
-                    <path d="M12 10L20 16L12 22V10Z" fill="white"/>
-                </svg>
+                <object data="assets/logo.svg" type="image/svg+xml" width="32" height="32" aria-label="Evil Martians logo">
+                    <img src="assets/logo.svg" alt="Evil Martians logo" width="32" height="32">
+                </object>
                 <span>Evil Martians</span>
             </div>
         </header>
@@ -44,10 +43,9 @@
                                     aria-describedby="email-error"
                                 >
                                 <div class="input-icon">
-                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M3.33334 3.33337H16.6667C17.5833 3.33337 18.3333 4.08337 18.3333 5.00004V15C18.3333 15.9167 17.5833 16.6667 16.6667 16.6667H3.33334C2.41668 16.6667 1.66668 15.9167 1.66668 15V5.00004C1.66668 4.08337 2.41668 3.33337 3.33334 3.33337Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                        <path d="M18.3333 5L10 10.8333L1.66668 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
+                                    <object data="assets/email-icon.svg" type="image/svg+xml" width="20" height="20" aria-label="Email icon">
+                                        <img src="assets/email-icon.svg" alt="Email icon" width="20" height="20">
+                                    </object>
                                 </div>
                             </div>
                             <div class="error-message" id="email-error" role="alert" aria-live="polite"></div>
@@ -72,15 +70,12 @@
                                     id="passwordToggle"
                                     aria-label="Toggle password visibility"
                                 >
-                                    <svg class="eye-open" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1 10s3-7 9-7 9 7 9 7-3 7-9 7-9-7-9-7Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                        <circle cx="10" cy="10" r="3" stroke="currentColor" stroke-width="1.5"/>
-                                    </svg>
-                                    <svg class="eye-closed" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                                        <path d="M14.12 14.12a10 10 0 0 1-8.24 0M9.9 4.24A9.12 9.12 0 0 1 10 4c6 0 9 7 9 7a13.16 13.16 0 0 1-1.67 2.68" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                        <path d="M6.61 6.61A13.526 13.526 0 0 0 1 11s3 7 9 7a9.74 9.74 0 0 0 5.39-1.61" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                        <line x1="2" y1="2" x2="22" y2="22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                                    </svg>
+                                    <object class="eye-open" data="assets/eye-open.svg" type="image/svg+xml" width="20" height="20" aria-label="Show password">
+                                        <img src="assets/eye-open.svg" alt="Show password" width="20" height="20">
+                                    </object>
+                                    <object class="eye-closed" data="assets/eye-closed.svg" type="image/svg+xml" width="20" height="20" aria-label="Hide password" style="display: none;">
+                                        <img src="assets/eye-closed.svg" alt="Hide password" width="20" height="20">
+                                    </object>
                                 </button>
                             </div>
                             <div class="error-message" id="password-error" role="alert" aria-live="polite"></div>
@@ -98,9 +93,9 @@
                         <button type="submit" class="submit-button" id="submitButton">
                             <span class="button-text">Sign in</span>
                             <div class="loading-spinner" style="display: none;">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M10 2V6M10 14V18M18 10H14M6 10H2M15.656 4.344L13.414 6.586M6.586 13.414L4.344 15.656M15.656 15.656L13.414 13.414M6.586 6.586L4.344 4.344" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                                </svg>
+                                <object data="assets/loading-spinner.svg" type="image/svg+xml" width="20" height="20" aria-label="Loading">
+                                    <img src="assets/loading-spinner.svg" alt="Loading" width="20" height="20">
+                                </object>
                             </div>
                         </button>
                     </form>
@@ -118,9 +113,9 @@
                 <div class="modal-header">
                     <h2 id="modal-title"></h2>
                     <button class="modal-close" id="modalClose" aria-label="Close modal">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 6L6 18M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <object data="assets/close-icon.svg" type="image/svg+xml" width="24" height="24" aria-label="Close">
+                            <img src="assets/close-icon.svg" alt="Close" width="24" height="24">
+                        </object>
                     </button>
                 </div>
                 <div class="modal-body">
